@@ -280,6 +280,7 @@ The change log for Nagios can be found online at <a href="http://www.nagios.org/
 	<li><b>Better scheduling information</b> - More detailed information is given when Nagios is executed with the -s command line option.  This information can be used to help <a href="faststartup.html">reduce</a> the time it takes to start/restart Nagios.</li>
 	<li><b>Aggregated status file updates</b> - The old <i>aggregate_status_updates</i> option has been removed.  All status file updates are now aggregated at a minimum interval of 1 second.</li>
 	<li><b>New performance data file mode</b> - A new "p" option has been added to the <a href="configmain.html#host_perfdata_file_mode">host_perfdata_file_mode</a> and <a href="configmain.html#service_perfdata_file_mode">service_perfdata_file_mode</a> options.  This new mode will open the file in non-blocking read/write mode, which is useful for pipes.</li>
+	<li><b>Timezone offset</b> - A new <a href="configmain.html#use_timezone">use_timezone</a> option has been added to allow you to run different instances of Nagios in timezones different from the local zone.</li>
 	</ul>
 </li>
 <br>
